--- a/about.html
+++ b/about.html
@@ -1,76 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us – PT. GREEN KAPPIOTA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .navbar {
-      background-color: #5c6b2b;
-    }
-
-    .navbar-brand, .nav-link {
-      color: white !important;
-    }
-
-    .navbar-brand img {
-      height: 60px;
-      margin-right: 10px;
-    }
-
-    .nav-scroll {
-      overflow-x: auto;
-      white-space: nowrap;
-      scrollbar-width: none;
-    }
-
-    .nav-scroll::-webkit-scrollbar {
-      display: none;
-    }
-
-    .nav .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      border-radius: 5px;
-    }
-
+    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; }
+    .navbar { background-color: #5c6b2b; }
+    .navbar-brand, .nav-link { color: white !important; }
+    .navbar-brand img { height: 60px; margin-right: 10px; }
+    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
+    .nav-scroll::-webkit-scrollbar { display: none; }
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
-
-    main {
-      flex: 1;
+    .content-section {
+      padding: 40px 20px;
     }
-
     footer {
-      background-color: #79824b;
+      background: linear-gradient(to top, #5c6b2b, #79824b);
+      background-attachment: fixed;
       color: white;
       text-align: center;
-      padding: 30px 10px;
-      margin-top: auto;
+      padding: 60px 20px;
+    }
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+    .whatsapp-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50%;
+      font-size: 20px;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
+<div id="loader">
+  <div class="spinner-border text-success" role="status"></div>
+</div>
 
-<!-- NAVBAR -->
 <nav class="navbar px-3">
   <div class="container-fluid d-block">
     <div class="d-flex align-items-center mb-2">
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <img src="images/logo-gika.jpg" alt="Logo" />
+        <img src="images/logo-gika.jpg" alt="Logo">
         <strong>PT. GREEN KAPPIOTA</strong>
       </a>
     </div>
@@ -89,30 +81,36 @@
   </div>
 </nav>
 
-<!-- HERO -->
 <section class="hero">
   <div class="container">
-    <h1>About Us</h1>
+    <h1 class="display-5" data-aos="fade-down">About Us</h1>
   </div>
 </section>
 
-<!-- MAIN CONTENT -->
-<main>
-  <div class="container my-5">
-    <p>
-      <strong>PT. GREEN KAPPIOTA</strong> was founded in 2021 with the strength of its skilled human resources and makes it a company that can be trusted by its stakeholders.
-    </p>
-    <p>
-      With a strong foundation in environmental consultancy, PT. GREEN KAPPIOTA continues to support the goals of clients in various sectors including ESG implementation, EIA supervision, and CSR strategy. The team comprises both national and international experts, ensuring high-quality service.
-    </p>
-  </div>
-</main>
+<section class="content-section container" data-aos="fade-up">
+  <p>
+    <strong>PT. GREEN KAPPIOTA CONSULTANT</strong> or abbreviated as <strong>PT. GIKA</strong> is a consultant that has a track record in the environment, including ESG, Environmental Impact Assessment (EIA) and rehabilitation and conservation of forest as well as Net Zero Emission (NZE) target and managing Corporate Social Responsibility (CSR), which helps stakeholders achieve their goals as we are supported by national and international experts which are experienced in their fields.
+  </p>
+  <p>
+    Founded in 2021, PT. GIKA thrives on the strength of its skilled human resources, making it a reliable company trusted by its stakeholders.
+  </p>
+</section>
 
-<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
 
+<a href="https://wa.me/6281293716447" target="_blank" class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+  window.addEventListener('load', () => {
+    document.getElementById('loader').style.display = 'none';
+  });
+</script>
 </body>
 </html>
