--- a/team.html
+++ b/team.html
@@ -1,95 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Management Team – PT. GREEN KAPPIOTA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Team – PT. GREEN KAPPIOTA</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .navbar {
-      background-color: #5c6b2b;
-    }
-
-    .navbar-brand, .nav-link {
-      color: white !important;
-    }
-
-    .navbar-brand img {
-      height: 60px;
-      margin-right: 10px;
-    }
-
-    .nav-scroll {
-      overflow-x: auto;
-      white-space: nowrap;
-      scrollbar-width: none;
-    }
-
-    .nav-scroll::-webkit-scrollbar {
-      display: none;
-    }
-
-    .nav .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      border-radius: 5px;
-    }
-
+    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; }
+    .navbar { background-color: #5c6b2b; }
+    .navbar-brand, .nav-link { color: white !important; }
+    .navbar-brand img { height: 60px; margin-right: 10px; }
+    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
+    .nav-scroll::-webkit-scrollbar { display: none; }
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
-
-    main {
-      flex: 1;
+    .content-section {
+      padding: 40px 20px;
     }
-
     footer {
-      background-color: #79824b;
+      background: linear-gradient(to top, #5c6b2b, #79824b);
+      background-attachment: fixed;
       color: white;
       text-align: center;
-      padding: 30px 10px;
-      margin-top: auto;
+      padding: 60px 20px;
     }
-
-    .team-box {
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: white;
-      border-radius: 8px;
-      padding: 30px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
     }
-
-    .team-member {
-      margin-bottom: 30px;
-    }
-
-    .team-member h5 {
-      margin-bottom: 5px;
-    }
-
-    .team-member p {
-      margin-bottom: 0;
+    .whatsapp-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50%;
+      font-size: 20px;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
+<div id="loader">
+  <div class="spinner-border text-success" role="status"></div>
+</div>
 
-<!-- NAVBAR -->
 <nav class="navbar px-3">
   <div class="container-fluid d-block">
     <div class="d-flex align-items-center mb-2">
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <img src="images/logo-gika.jpg" alt="Logo" />
+        <img src="images/logo-gika.jpg" alt="Logo">
         <strong>PT. GREEN KAPPIOTA</strong>
       </a>
     </div>
@@ -108,55 +81,50 @@
   </div>
 </nav>
 
-<!-- HERO -->
 <section class="hero">
   <div class="container">
-    <h1>Management Team</h1>
+    <h1 class="display-5" data-aos="fade-down">Management Team</h1>
   </div>
 </section>
 
-<!-- MAIN CONTENT -->
-<main>
-  <div class="container my-5">
-    <div class="team-box">
-
-      <!-- Managing Director -->
-      <div class="team-member">
-        <h5>Managing Director</h5>
-        <p><strong>Muhammad Azhar, Bachelor in Computer System</strong></p>
-        <p>A young and energetic strategic management leader as a founding company with experience in environment including marine protected areas management and computer systems.</p>
-        <p>Contact: Email: ……, Mobile: ……</p>
-      </div>
-
-      <!-- Director of Business and External -->
-      <div class="team-member">
-        <h5>Director of Business and External</h5>
-        <p><strong>Dewi Damayanti, Bachelor in Public Health</strong></p>
-        <p>Contact: Email: dewidamayanti2614@gmail.com, Mobile: +62 81293716447</p>
-      </div>
-
-      <!-- Experts -->
-      <div class="team-member">
-        <h5>Experts</h5>
-        <p><strong>Prof. Dr. Ulf Henning Richter</strong><br />
-        A professor, author, and serial entrepreneur. His work centers around sustainability, climate and energy resilience, ESG, and global justice.</p>
-
-        <p><strong>Dr. Batih</strong><br />
-        Experienced in energy sector and port management in Indonesia. He understands national inventory and company-level carbon accounting.</p>
-
-        <p><strong>Samyang, MSc</strong><br />
-        Experienced in carbon pricing in the energy sector in Indonesia. Serves as an expert for the Ministry of Environment as a panelist on carbon pricing.</p>
-      </div>
-
-    </div>
+<section class="content-section container" data-aos="fade-up">
+  <div class="mb-4">
+    <h5>Managing Director</h5>
+    <p><strong>Muhammad Azhar, Bachelor in Computer System</strong><br>
+    A young and energetic strategic management leader as the founding company with experience in the environment including marine protected areas management and computer systems.<br>
+    <em>Contact: Email: …..  Mobile: +62 81214056502</em></p>
   </div>
-</main>
+  <div class="mb-4">
+    <h5>Director of Business and External</h5>
+    <p><strong>Dewi Damayanti, Bachelor in Public Health</strong><br>
+    ………………………………….<br>
+    <em>Contact: Email: dewidamayanti2614@gmail.com  Mobile: +62 81293716447</em></p>
+  </div>
+  <div>
+    <h5>Experts</h5>
+    <ul>
+      <li><strong>Prof. Dr. Ulf Henning Richter</strong>: Professor, author, and serial entrepreneur. Focuses on sustainability, climate and energy resilience, ESG, and global justice.</li>
+      <li><strong>Dr. Batih</strong>: Expert in energy sector and port management in Indonesia. Knowledgeable in national inventory and company scopes.</li>
+      <li><strong>Samyang, MSc</strong>: Specialist in carbon pricing in the energy sector, advisor to the Ministry for Environment on carbon pricing policies.</li>
+    </ul>
+  </div>
+</section>
 
-<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
 
+<a href="https://wa.me/6281293716447" target="_blank" class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+  window.addEventListener('load', () => {
+    document.getElementById('loader').style.display = 'none';
+  });
+</script>
 </body>
 </html>
