--- a/portfolio.html
+++ b/portfolio.html
@@ -1,77 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio – PT. GREEN KAPPIOTA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .navbar {
-      background-color: #5c6b2b;
-    }
-
-    .navbar-brand, .nav-link {
-      color: white !important;
-    }
-
-    .navbar-brand img {
-      height: 60px;
-      margin-right: 10px;
-    }
-
-    .nav-scroll {
-      overflow-x: auto;
-      white-space: nowrap;
-      scrollbar-width: none;
-    }
-
-    .nav-scroll::-webkit-scrollbar {
-      display: none;
-    }
-
-    .nav .nav-link:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-      border-radius: 5px;
-    }
-
+    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; }
+    .navbar { background-color: #5c6b2b; }
+    .navbar-brand, .nav-link { color: white !important; }
+    .navbar-brand img { height: 60px; margin-right: 10px; }
+    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
+    .nav-scroll::-webkit-scrollbar { display: none; }
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
-
-    main {
-      flex: 1;
+    .content-section {
+      padding: 40px 20px;
     }
-
     footer {
-      background-color: #79824b;
+      background: linear-gradient(to top, #5c6b2b, #79824b);
+      background-attachment: fixed;
       color: white;
       text-align: center;
-      padding: 30px 10px;
-      margin-top: auto;
+      padding: 60px 20px;
+    }
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
+    }
+    .whatsapp-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50%;
+      font-size: 20px;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
+<div id="loader">
+  <div class="spinner-border text-success" role="status"></div>
+</div>
 
-<!-- NAVBAR -->
 <nav class="navbar px-3">
   <div class="container-fluid d-block">
     <div class="d-flex align-items-center mb-2">
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <img src="images/logo-gika.jpg" alt="Logo" />
+        <img src="images/logo-gika.jpg" alt="Logo">
         <strong>PT. GREEN KAPPIOTA</strong>
       </a>
     </div>
@@ -90,50 +81,40 @@
   </div>
 </nav>
 
-<!-- HERO -->
 <section class="hero">
   <div class="container">
-    <h1>Our Portfolio</h1>
+    <h1 class="display-5" data-aos="fade-down">Our Portfolio</h1>
   </div>
 </section>
 
-<!-- MAIN CONTENT -->
-<main>
-  <div class="container my-5">
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">
-        Short desktop study on appropriate method of carbon measurement of forestry in Kalimantan with Pollination, 2023.
-      </li>
-      <li class="list-group-item">
-        EIA supervision to Greencorp Company on Hua Yoo Port in Pomala, 2023.
-      </li>
-      <li class="list-group-item">
-        Individual consultant on carbon pricing instruments development, UNDP, 2022.
-      </li>
-      <li class="list-group-item">
-        Technical Expert for Identification of Role and Opportunities for Indonesian Environment Fund in Carbon Market Scheme, PT CBS/GGGI, 2022.
-      </li>
-      <li class="list-group-item">
-        Carbon market expert for Article 6 Support Facility and Supporting Sustainable and Universal Electricity Access Phase 2 (Subproject 3), Asian Development Bank, 2021–2022.
-      </li>
-      <li class="list-group-item">
-        National consultant on technical assistant for upgrading the national metadata for SDGs, JICA, 2022.
-      </li>
-      <li class="list-group-item">
-        Technical Assistance on Development of the National Action Plan for SDGs, JICA, 2021.
-      </li>
-      <li class="list-group-item">
-        Mainstreaming Regional Climate Mitigation Action and Energy Planning into RPJMD Draft – MTRE3/UNDP, 2021.
-      </li>
-    </ul>
-  </div>
-</main>
+<section class="content-section container" data-aos="fade-up">
+  <ul class="list-group">
+    <li class="list-group-item">1. Short desktop study on appropriate method of carbon measurement of forestry in Kalimantan with Pollination, 2023</li>
+    <li class="list-group-item">2. EIA supervision to Greencorp Company on EIA Port belongs Hua Yoo, in Pomala, 2023</li>
+    <li class="list-group-item">3. Individual consultant on carbon pricing instruments development, UNDP, 2022</li>
+    <li class="list-group-item">4. Technical Expert for Identification of Role and Opportunities for Indonesian Environment Fund in Carbon Market Scheme, PT CBS/GGGI, 2022</li>
+    <li class="list-group-item">5. Carbon market expert for Article 6 Support Facility and Supporting Sustainable and Universal Electricity Access Phase 2 (Subproject 3), Asian Development Bank, 2021 – 2022</li>
+    <li class="list-group-item">6. National consultant on the technical assistant on upgrading the national metadata for SDGs, JICA, 2022</li>
+    <li class="list-group-item">7. Technical Assistance on Development of the National Action Plan for SDGs, JICA, 2021</li>
+    <li class="list-group-item">8. Mainstreaming Regional Climate Mitigation Action and Regional Energy Planning into RPJMD draft in Pilot Provinces of MTRE3/MTRE3-UNDP, 2021</li>
+  </ul>
+</section>
 
-<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
 
+<a href="https://wa.me/6281293716447" target="_blank" class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+  window.addEventListener('load', () => {
+    document.getElementById('loader').style.display = 'none';
+  });
+</script>
 </body>
 </html>
